simple/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qa-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qa-app
  template:
    metadata:
      labels:
        app: qa-app
    spec:
      containers:
      - name: webserver-simple
        image: docker.io/kostiscodefresh/traefik-demo-app:main
        # image: kostiscodefresh/summer-of-k8s-app:v1
        # image: kennethreitz/httpbin
        ports:
        - containerPort: 8080
